--- a/.eslintrc
+++ b/.eslintrc
@@ -16,14 +16,10 @@ env:
   browser: true
   jasmine: true
   node: true
+  protractor: true
 globals:
   angular: true
   inject: true
   module: true
   moment: true
-  TzDate: true
-  _: true
-  JSData: true
-  DSHttpAdapter: true
-  fixtures: true
 extends: 'eslint:recommended'
